updated device environment variables template

--- a/raspberrypi/device.env.example
+++ b/raspberrypi/device.env.example
@@ -4,6 +4,13 @@ NAME=TV 1
 IP=192.168.xxx.xxx
 CODE=1234
 
+# Details to connect to the IoT Service
+HOSTNAME=xxxxxxxxxxxx.iot.ap-southeast-2.amazonaws.com
+PRIVATEKEY=MyIotThing.private.key
+CLIENTCERTIFICATES=MyIotThing.cert.pem
+CACERTIFICATE=root-CA.crt
+CLIENTID=sdk-nodejs-xxxxxxxxxxxxxx
+
 # These are the variables for inputs
 DEVICE__MEDIA_PLAYER=extInput:cec?type=player&port=4&logicalAddr=4
 DEVICE__BLURAY=extInput:cec?type=player&port=4&logicalAddr=8
